--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,244 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  color: white;
+}
+:root {
+  --color-bg: #282c34;
+  --color-bg-variant: #1b263b;
+  --color-primary: #61dafb;
+  --color-primary-variant: ;
+  --color-white: #fff;
+  --color-light: rgba(255, 255, 255, 0.6);
+  --color-home: #0d6efd;
+
+  --transition: all 400ms ease;
+
+  --container-width-lg: 75%;
+  --container-width-md: 86%;
+  --container-width-ms: 90%;
+
+  /*====================== OTHER-COLORS ==========================*/
+  --hue: 0;
+  --sat: 0%;
+  --title-color: hsl(var(--hue), var(--sat), 20%);
+  --title-color-dark: hsl(var(--hue), var(--sat), 0%);
+  --text-color: hsl(var(--hue), var(--sat), 46%);
+  --body-color: hsl(var(--hue), var(--sat), 98%);
+  --container-color: #fff;
+
+  /*========================= FONT WEIGHT =====================*/
+  --font-normal: 400;
+  --font-medium: 500;
+  --font-semi-bold: 600;
+
+  /*=====================FONT SIZE====================*/
+  --normal-font-size: 0.938rem;
+  --small-font-size: 0.813rem;
+  --smaller-font-size: 0.75rem;
+
+  /*=====================z index====================*/
+  --z-tooltip: 10px;
+  --z-fixed: 100;
+  --z-modal: 1000;
+
+  /*=====================Margin Bottom====================*/
+  --mb-0-25: 0.25rem;
+  --mb-0-5: 0.5rem;
+  --mb-0-75: 0.75rem;
+  --mb-1: 1rem;
+  --mb-1-5: 1.5rem;
+  --mb-2: 2rem;
+  --mb-2-5: 2.5rem;
+  --mb-3: 3rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  background: var(--color-bg);
+  color: var(--color-white);
+  line-height: 1.7;
+}
+
+/*======== GENERAL STYLES =======*/
+.container {
+  /*max-width: 968px;*/
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 500;
+}
+
+/*h1, h2, h3{
+  color: var(--title-color);
+}*/
+h1 {
+  font-size: 2.5rem;
+}
+
+section {
+  margin-top: 2rem;
+  /*padding: 6rem 0 2rem;*/
+}
+
+/*.section__title{
+  font-size: var(--h1-font-size);
+  color: var(--title-color);
+}
+
+.section__subtitle{
+  display: block;
+  font-size: var(--small-font-size);
+  margin-bottom: 4rem;
+}
+
+.section__title, .section__subtitle{
+  text-align: center;
+}*/
+
+section > h2,
+section > h5 {
+  text-align: center;
+  color: var(--color-primary);
+}
+
+section > h5 {
+  color: var(--color-light);
+  margin-bottom: 3rem;
+}
+
+.text-light {
+  color: var(--color-primary);
+}
+
+a,
+a > i {
+  color: var(--color-primary);
+  transition: var(--transition);
+}
+
+a:hover {
+  color: var(--color-white);
+  border-bottom: var(--color-primary);
+}
+a > i:hover {
+  color: var(--color-white);
+  border-bottom: var(--color-primary);
+}
+
+/*=====================Buttons====================*/
+.btn {
+  width: max-content;
+  display: inline-block;
+  color: var(--color-primary);
+  padding: 0.65rem 0.8rem;
+  border-radius: 0.8rem;
+  cursor: pointer;
+  border: 1px solid var(--color-primary);
+  font-weight: var(--font-medium);
+  transition: var(--transition);
+  margin-right: 5px;
+  margin-top: 10px;
+}
+
+.btn:hover {
+  background: var(--color-white);
+  color: var(--color-bg);
+  border-color: transparent;
+}
+
+.btn-primary {
+  background: var(--color-primary);
+  color: var(--color-bg);
+}
+.btn__icon {
+  margin-left: var(--mb-0-5);
+}
+.btn--flex {
+  display: inline-flex;
+  align-items: center;
+}
+
+img {
+  display: block;
+  width: 100%;
+  /*max-width: 100%;
+  height: auto;*/
+  object-fit: contain;
+}
+
+/*=====================MEDIA QUERIES - TABLETS====================*/
+@media screen and (max-width: 1024px) {
+  .container {
+    width: var(--container-width-md);
+  }
+
+  .section {
+    margin-top: 3rem;
+  }
+
+  .btn {
+    padding: 0.6rem 0.7rem;
+  }
+}
+
+/*=====================MEDIA QUERIES - MEDIUM SCREENS====================*/
+@media screen and (max-width: 768px) {
+  .container {
+    width: var(--container-width-md);
+  }
+
+  section {
+    margin-top: 4rem;
+  }
+}
+
+/*=====================MEDIA QUERIES - medium SCREENS====================*/
+@media screen and (max-width: 576px) {
+}
+
+/*=====================MEDIA QUERIES - medium SCREENS====================*/
+@media screen and (max-width: 350px) {
+  .btn {
+    padding: 0.5rem 0.6rem;
+  }
+  section {
+    margin-top: 2rem;
+  }
+}
+
+/*=====================MEDIA QUERIES - MOBILE PHONES====================*/
+@media screen and (max-width: 730px) {
+  section > h5 {
+    margin-bottom: 1.5rem;
+  }
+  section > h2 {
+    margin-bottom: 0.5rem;
+    margin-top: 0rem;
+  }
 }
